fixed navbar overlapping on mobile

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -3,7 +3,11 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-landing-page/blob/master/LICENSE)
  */
-body {
+@media screen and (max-width: 768px) {
+    body { padding-top: 0px; }
+}
+
+body {padding-top: 40px; 
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 
 h1,
